# OptimizationLib

./: .gitignore  CMakeLists.txt  Config.h.in  README.md  main.cpp  stdafx.h
OptLib/: CMakeLists.txt
OptLib/AuxMethods/: Simplex.h  SimplexOps.h  SimplexSerial.h
OptLib/Functions/: FuncAlongGradDirection.h  FuncParamInterface.h  Function.h  FunctionInterface.h  FunctionParam.h  Himmel.h  Improvedfunctions.h  Paraboloid.h  Rozenbrock.h
OptLib/Functions/Interface/: FuncInterface.h  FuncParamInterface.h  FunctionWithMemory.h
OptLib/Optimizers/: OptimizerInterface.h  OverallOptimizer.h
OptLib/Optimizers/NDim/: Annealing.h  NelderMead.h  Newton.h
OptLib/Optimizers/OneDim/: Annealing.h  Bisection.h  Dichotomy.h  GoldenSection.h  Grid.h
OptLib/Points/: Definitions.h  SetOfPointVals.h
OptLib/Points/SetOfPoints/: SetOfPointOperators.h  SetOfPoints.h
OptLib/Points/SetOfPoints/PointVals/: PointVal.h  PointValOperators.h
OptLib/Points/SetOfPoints/PointVals/Point/: Point.h  PointOperators.h  PointOperatorsImpl.h  PointOperatorsSerial.h  SimplexSIMD.h
OptLib/States/: State.h  StateInterface.h  StateWithMemory.h
OptLib/TestMethods/: testOptimizer.h  testRegression.h  testSimplex.h
examples/: CMakeLists.txt  config-template.h  functions_ex.cpp  optimizer_ex.cpp  points_ex.cpp  pointvals_ex.cpp  setofpoints_ex.cpp  setofpointvals_ex.cpp  state_ex.cpp
test/: CMakeLists.txt  fixture_demo.cpp  foo_test.cpp  point_test.cpp
